@@ -1,5 +1,10 @@
 2011-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* python/mushin/command/main.py:
+	  Move log to main()
+
+2011-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* python/mushin/model/couch.py:
 	  Remove fromDict, something similar is now in paisley mushin branch.
 
